--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+midonet-openstack (12.06.0) quantal; urgency=low
+
+  * Official Babuza release.
+
+ -- Tomoe Sugihara <tomoe@midokura.com>  Fri, 15 Jun 2012 18:31:41 +0900
+
 midonet-openstack (12.06~2) precise; urgency=low
 
   * pre Babuza ~2
