--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+midonet-openstack (12.12.0) precise; urgency=low
+
+  * Official Caddo release.
+
+ -- Tomoe Sugihara <tomoe@midokura.com>  Thu, 20 Dec 2012 20:16:50 +0900
+
 midonet-openstack (12.06.0) quantal; urgency=low
 
   * Official Babuza release.
