--- a/README
+++ b/README
@@ -1,16 +1,20 @@
-MidoNet Plugin for Quantum
+MidoNet Plugin for Nova
 -----------------------------------------------------------------------------
 Overview and pre-requisites
-	 
-	 This is the Quantum plugin which enables MidoNet network 
-	 virtualization for OpenStack.  MidoNet provides scalable distributed
-	 network services for OpenStack. In order to use this plugin you must
-	 have MidoNet configured and running. You must also have Quantum 
-	 installed and configured.
+
+	 This is the OpenStack Nova python module which enables MidoNet network
+	 virtualization for OpenStack.
+     For the information about the MidoNet Quantum Plugin, please go to
+     http://wiki.openstack.org/Spec-QuantumMidoNetPlugin
+
+     MidoNet provides scalable distributed
+	 network services for OpenStack. In order to use this module you must
+	 have MidoNet configured and running. You must also have Quantum
+	 installed and configured with the MidoNet plugin.
 
 Installation and Configuration
 
 	 Please contact Midokura at info@midokura.com for information on
 	 installing and setting up MidoNet for OpenStack.  For more info
-	 about MidoNet for OpenStack please go to 
+	 about MidoNet for OpenStack please go to
 	 http://midokura.com/midonet/openstack
