--- a/README
+++ b/README
@@ -18,3 +18,6 @@ Installation and Configuration
 	 installing and setting up MidoNet for OpenStack.  For more info
 	 about MidoNet for OpenStack please go to
 	 http://midokura.com/midonet/openstack
+
+MidoNet compatibility
+     midonet-openstack Grizzly is compatible with MidoNet version v1.1. 
