--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+midonet-openstack (1:2013.1.2-1ubuntu1) precise-grizzly; urgency=low
+
+  * Bug Fix
+    - Ports were not added correctly to SG
+    - Set MTU size to 65521 when creating TAP interface
+
+ -- Guillermo Ontanon <guillermo@midokura.com>  Mon, 4 Aug 2013 17:07:17 +0200
+
 midonet-openstack (1:2013.1.2-0ubuntu1) precise-grizzly; urgency=low
 
   * Change the version to include patch version.
