--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+midonet-openstack (1:2013.1.0-0ubuntu1.mido3) precise-grizzly; urgency=low
+
+  * Bug Fix
+    - Fix the signature of get_config adding inst_type
+
+ -- Dave Cahill <dcahill@midokura.com>  Fri, 4 Oct 2013 17:17:17 +0900
+
 midonet-openstack (1:2013.1.0-0ubuntu1.mido2) precise-grizzly; urgency=low
 
   * Bug Fix
