Update to Havana and add RPM build

--- a/README
+++ b/README
@@ -20,4 +20,4 @@ Installation and Configuration
 	 http://midokura.com/midonet/openstack
 
 MidoNet compatibility
-     midonet-openstack Grizzly is compatible with MidoNet version v1.1. 
+     midonet-openstack Havana is compatible with MidoNet version v1.3.
